# django-route

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  fabfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
django_route/: __init__.py  admin.py  apps.py  cache.py  decorators.py  middlewares.py  models.py  utils.py  validators.py
django_route/conf/: __init__.py  global_settings.py
django_route/migrations/: 0001_initial.py  0002_router_description.py
django_route/signals/: handlers.py
django_routing/: decorators.py  middlewares.py  models.py  utils.py
django_routing/conf/: __init__.py
django_routing/migrations/: 0001_initial.py
docs/: Makefile  caveats.rst  conf.py  execution.rst  index.rst  installation.rst  make.bat  models.rst  overview.rst  settings.rst
tests/: conftest.py  settings.py  tests.py  urls.py  wsgi.py
