[flake8]
exclude =
    build,
    .git,
    .tox,
    __pycache__,
    ./manage.py,
    ./django_routing/migrations/*
max-line-length = 119
max-complexity = 10

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[tool:pytest]
testpaths = tests/
python_files = tests.py
DJANGO_SETTINGS_MODULE=tests.settings

[coverage:run]
branch = True

[coverage:report]
omit =
    django_routing/migrations/*
    django_routing/admin.py
    django_routing/conf/*
exclude_lines =
    pragma: no cover
    def __str__
    def __unicode__
    def __repr__
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[metadata]
license-file = LICENSE

[wheel]
universal = 1
